# KernelBridge

./: .gitignore  AMD_OPTIMIZATIONS.md  COMO_JUGAR_STEAM_FLATPAK.md  COMO_USAR_EL_ASISTENTE.md  CREAR_KERNEL_WINDOWS.md  DEBUG_MODE.md  DELTA_FORCE_GUI.md  DELTA_FORCE_README.md  GUIA_RAPIDA.md  LICENSE  LICENSE_EN  POR_QUE_NO_PUEDO_ACE.md  PRIVACY_NOTICE_EN.md  README.md  README_EN.md  README_FINAL.md  README_PRIVACIDAD.md  SOLUCION_ACE.md  SOLUCION_PROBLEMAS_GUI.md  SOLUCION_STEAM_NO_INICIA.md  STEAM_GEPROTON_LISTO.md  STEAM_INTEGRATION.md  TODAS_LAS_OPCIONES.md  WIZARD_README.md  anti_cheat_gateway.md  apis_hibridas_nt.md  build.sh  check_steam_logs.sh  clean_ace.sh  compatibilidad_anticheat.md  delta_force_guia.md  deltaforce.conf  demo_guion.md  ejemplo_diag.json  fix_steam_flatpak.sh  flujo_comunicacion.md  game_launcher.md  install_aliases.sh  install_amd_tools.sh  install_steam_integration.sh  (+22 more)
core/: Cargo.toml  ac_integration.rs  lib.rs  nt_api.rs  nt_structs.rs
daemon/: Cargo.toml  ac_integration.rs  ace_handler.rs  anti_cheat_gateway.rs  event_broker.rs  game_launcher.rs  integrity_monitor.rs  kernel_validator.rs  lib.rs  main.rs  memory_auditor.rs  minecraft_auto_fix.rs  mod_compat.rs  mod_resolver.rs  nt_api.rs  nt_device_proxy.rs  system_bridge_api.rs  tpm_manager.rs
deb/DEBIAN/: control
flatpak/: org.kernelbridge.KernelBridge.yml
gui/: Cargo.toml  main.rs
modules/: anti_cheat_gateway.rs  event_broker.rs  game_launcher.rs  integrity_monitor.rs  kernel_validator.rs  memory_auditor.rs  system_bridge_api.rs  tpm_manager.rs
rpm/: kernelbridge.spec
