[package]
name = "core"
version = "0.1.0"
edition = "2021"

[lib]
name = "core"
path = "lib.rs"

[dependencies]
lazy_static = "1.4.0"
sha2 = "0.10"
nix = "0.26"

[profile.release]
# Optimizaciones agresivas para librería en release
opt-level = 3
lto = "thin"
codegen-units = 1
panic = "abort"
strip = "symbols"
