[package]
name = "kernelbridge-daemon"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "kernelbridge-daemon"
path = "main.rs"

[dependencies]
nix = "0.26"
tokio = { version = "1", features = ["full"] } # Para async si se necesita
zbus = "3" # Para D-Bus opcional
sha2 = "0.10"
core = { path = "../core" }
lazy_static = "1.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json", "blocking", "rustls-tls"] }
urlencoding = "2.1"

[profile.release]
# Optimizaciones agresivas para binarios de release
opt-level = 3
lto = "thin"
codegen-units = 1
panic = "abort"
strip = "symbols"