[package]
name = "kernelbridge-gui"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "kernelbridge-gui"
path = "main.rs"

[dependencies]
core = { path = "../core" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
lazy_static = "1.4.0"
sha2 = "0.10"
# Relm4 moderno con GTK4
relm4 = { version = "0.10", features = ["macros", "gnome_42"] }
relm4-macros = "0.10"
shellexpand = "3.1"

# GTK4 bindings (versiones actuales)
gtk = { version = "0.10", package = "gtk4" }
glib = "0.18"
pango = "0.18"
gio = "0.18"

[profile.release]
# Optimizaciones agresivas para binarios de release
opt-level = 3
lto = "thin"
codegen-units = 1
panic = "abort"
strip = "symbols"